--- a/homeworks/assignment14_word2vec/assignment_word2vec.ipynb
+++ b/homeworks/assignment14_word2vec/assignment_word2vec.ipynb
@@ -31,10 +31,10 @@
       "execution_count": 1,
       "metadata": {
         "id": "Oipe2DU8qfm7",
-        "outputId": "f3dc9325-6a85-49b5-e07a-0fb9d2b1eea7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f3dc9325-6a85-49b5-e07a-0fb9d2b1eea7"
       },
       "outputs": [
         {
@@ -127,6 +127,39 @@
         "# download the data:\n",
         "!wget https://www.dropbox.com/s/obaitrix9jyu84r/quora.txt?dl=1 -O ./quora.txt -nc\n",
         "# alternative download link: https://yadi.sk/i/BPQrUu1NaTduEw"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!wget https://github.com/girafe-ai/ml-course/blob/23f_ysda/homeworks/assignment14_word2vec/words_subset.txt"
+      ],
+      "metadata": {
+        "id": "lSbD1N2g2cPD",
+        "outputId": "2199c0e6-bda2-42da-e67a-7df30ede07c6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2024-10-29 19:56:31--  https://github.com/girafe-ai/ml-course/blob/23f_ysda/homeworks/assignment14_word2vec/words_subset.txt\n",
+            "Resolving github.com (github.com)... 20.27.177.113\n",
+            "Connecting to github.com (github.com)|20.27.177.113|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: unspecified [text/html]\n",
+            "Saving to: ‘words_subset.txt’\n",
+            "\n",
+            "words_subset.txt        [ <=>                ] 474.88K  2.74MB/s    in 0.2s    \n",
+            "\n",
+            "2024-10-29 19:56:32 (2.74 MB/s) - ‘words_subset.txt’ saved [486276]\n",
+            "\n"
+          ]
+        }
       ]
     },
     {
@@ -310,10 +343,10 @@
       "execution_count": 11,
       "metadata": {
         "id": "h2-aqyyaqU0x",
-        "outputId": "940effdf-328d-48cf-a7f7-6995536c6f6f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "940effdf-328d-48cf-a7f7-6995536c6f6f"
       },
       "outputs": [
         {
@@ -598,7 +631,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 90,
       "metadata": {
         "id": "No_fuZXQt9E6"
       },
@@ -607,21 +640,23 @@
         "class SkipGramModelWithNegSampling(nn.Module):\n",
         "    def __init__(self, vocab_size, embedding_dim):\n",
         "        super().__init__()\n",
-        "        self.center_embeddings = nn.Linear(vocab_size, embedding_dim, bias = False)  # YOUR CODE HERE\n",
-        "        self.context_embeddings = nn.Linear(vocab_size, embedding_dim, bias = False)  # YOUR CODE HERE\n",
+        "        self.center_embeddings = nn.Embedding(vocab_size, embedding_dim)  # YOUR CODE HERE\n",
+        "        self.context_embeddings = nn.Embedding(vocab_size, embedding_dim)  # YOUR CODE HERE\n",
         "        self.vocab_size = vocab_size\n",
         "\n",
         "    def forward(self, center_words, pos_context_words, neg_context_words):\n",
         "        # YOUR CODE HERE\n",
         "\n",
-        "        center_emb = self.center_embeddings(torch.nn.functional.one_hot(center_words, num_classes=self.vocab_size).float()).unsqueeze(1)\n",
-        "        pos_emb = self.context_embeddings(torch.nn.functional.one_hot(neg_context_words, num_classes=self.vocab_size).float())\n",
-        "        neg_emb = self.context_embeddings(torch.nn.functional.one_hot(neg_context_words, num_classes=self.vocab_size).float())\n",
+        "        center_emb = self.center_embeddings(center_words)\n",
+        "        pos_emb = self.context_embeddings(pos_context_words)\n",
+        "        neg_emb = self.context_embeddings(neg_context_words)\n",
         "        #print(center_emb.shape, pos_emb.shape, neg_emb.shape)\n",
+        "        #pos_scores = torch.mul(center_emb, pos_emb)\n",
+        "        #neg_score = torch.bmm(neg_emb, center_emb.unsqueeze(2)).squeeze()\n",
         "        pos_scores = center_emb * pos_emb\n",
-        "        neg_scores = center_emb * neg_emb\n",
+        "        neg_scores = center_emb.unsqueeze(1) * neg_emb\n",
         "\n",
-        "        return torch.sigmoid(pos_scores).sum(dim=(1,2)), torch.sigmoid(neg_scores).sum(dim=(2))"
+        "        return torch.sigmoid(pos_scores).sum(dim=(1)), torch.sigmoid(neg_scores).sum(dim=(2))"
       ]
     },
     {
@@ -637,7 +672,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 91,
       "metadata": {
         "id": "OEjfdYEJt9E6"
       },
@@ -655,7 +690,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 64,
       "metadata": {
         "id": "IMbVArYNt9E6"
       },
@@ -669,7 +704,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 92,
       "metadata": {
         "id": "B8g_Py0ft9E6"
       },
@@ -726,7 +761,7 @@
         "        loss_history.append(loss.item())\n",
         "        lr_scheduler.step(loss_history[-1])\n",
         "\n",
-        "        if step % 100 == 0:\n",
+        "        if step % 20 == 0:\n",
         "            print(\n",
         "                f\"Step {step}, Loss: {np.mean(loss_history[-100:])}, learning rate: {lr_scheduler._last_lr}\"\n",
         "            )"
@@ -736,25 +771,25 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Ul8rStN3t9E7",
-        "outputId": "6804a4e0-3b22-4f19-b303-a5ced3a4f53e",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000,
+          "height": 118,
           "referenced_widgets": [
-            "bcdced2319354f6393dcbb47f45bfaa6",
-            "d26f03f51a3c45f5ab4b5485674c3370",
-            "ed983ad9e56440da85549827619bd511",
-            "9e909b34ce2c4d9eab4586893a625c8c",
-            "69c188e75a824d4d8fe7c55122a0496a",
-            "bc37f85b7f90454e831c2a30ed300031",
-            "09d33180ada34314affbce1a8771483f",
-            "cc85341b87474d6db422e21b12c08bd9",
-            "8a3c14b3b9d24f56bda63b7e98824ab4",
-            "70cb273e57394f36a21ee9f2a98808a3",
-            "6250081dd84742f3be3d418ea28b747a"
+            "ddf392358e7749e78920179bd1c0c2f6",
+            "b0f99b429c184ec5961da4a87272b32b",
+            "d3cd8d51b7fb4c76bf40d51b6eaf3863",
+            "c205b42a743b44b89a8824f6390610df",
+            "43fa27fbeb3e41459834379d729a5d5e",
+            "c781e17c509a413db8647cb95d429a76",
+            "0a72c434400c48c1a36c0906b5cbc384",
+            "e23e8b70ddf54076b45da2fb085866a5",
+            "6b25d6983f5b457fb86603f45e01e632",
+            "e2dab6a7cfb44c36a2c0e4b2b714aa44",
+            "eff0f4db1dfd41a09a18d955cb3a602c"
           ]
-        }
+        },
+        "id": "Ul8rStN3t9E7",
+        "outputId": "2be18b76-99df-4788-ae81-f0d2a678d5ae"
       },
       "outputs": [
         {
@@ -766,7 +801,7 @@
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
               "version_minor": 0,
-              "model_id": "bcdced2319354f6393dcbb47f45bfaa6"
+              "model_id": "ddf392358e7749e78920179bd1c0c2f6"
             }
           },
           "metadata": {}
@@ -775,71 +810,10 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "torch.Size([512]) torch.Size([512])\n",
-            "torch.Size([512, 15]) torch.Size([512, 15])\n",
-            "Step 0, Loss: 16.0, learning rate: [0.05]\n",
-            "torch.Size([512]) torch.Size([512])\n",
-            "torch.Size([512, 15]) torch.Size([512, 15])\n",
-            "torch.Size([512]) torch.Size([512])\n",
-            "torch.Size([512, 15]) torch.Size([512, 15])\n",
-            "torch.Size([512]) torch.Size([512])\n",
-            "torch.Size([512, 15]) torch.Size([512, 15])\n",
-            "torch.Size([512]) torch.Size([512])\n",
-            "torch.Size([512, 15]) torch.Size([512, 15])\n",
-            "torch.Size([512]) torch.Size([512])\n",
-            "torch.Size([512, 15]) torch.Size([512, 15])\n",
-            "torch.Size([512]) torch.Size([512])\n",
-            "torch.Size([512, 15]) torch.Size([512, 15])\n",
-            "torch.Size([512]) torch.Size([512])\n",
-            "torch.Size([512, 15]) torch.Size([512, 15])\n",
-            "torch.Size([512]) torch.Size([512])\n",
-            "torch.Size([512, 15]) torch.Size([512, 15])\n",
-            "torch.Size([512]) torch.Size([512])\n",
-            "torch.Size([512, 15]) torch.Size([512, 15])\n",
-            "torch.Size([512]) torch.Size([512])\n",
-            "torch.Size([512, 15]) torch.Size([512, 15])\n",
-            "torch.Size([512]) torch.Size([512])\n",
-            "torch.Size([512, 15]) torch.Size([512, 15])\n",
-            "torch.Size([512]) torch.Size([512])\n",
-            "torch.Size([512, 15]) torch.Size([512, 15])\n",
-            "torch.Size([512]) torch.Size([512])\n",
-            "torch.Size([512, 15]) torch.Size([512, 15])\n",
-            "torch.Size([512]) torch.Size([512])\n",
-            "torch.Size([512, 15]) torch.Size([512, 15])\n",
-            "torch.Size([512]) torch.Size([512])\n",
-            "torch.Size([512, 15]) torch.Size([512, 15])\n",
-            "torch.Size([512]) torch.Size([512])\n",
-            "torch.Size([512, 15]) torch.Size([512, 15])\n",
-            "torch.Size([512]) torch.Size([512])\n",
-            "torch.Size([512, 15]) torch.Size([512, 15])\n",
-            "torch.Size([512]) torch.Size([512])\n",
-            "torch.Size([512, 15]) torch.Size([512, 15])\n",
-            "torch.Size([512]) torch.Size([512])\n",
-            "torch.Size([512, 15]) torch.Size([512, 15])\n",
-            "torch.Size([512]) torch.Size([512])\n",
-            "torch.Size([512, 15]) torch.Size([512, 15])\n",
-            "torch.Size([512]) torch.Size([512])\n",
-            "torch.Size([512, 15]) torch.Size([512, 15])\n",
-            "torch.Size([512]) torch.Size([512])\n",
-            "torch.Size([512, 15]) torch.Size([512, 15])\n",
-            "torch.Size([512]) torch.Size([512])\n",
-            "torch.Size([512, 15]) torch.Size([512, 15])\n",
-            "torch.Size([512]) torch.Size([512])\n",
-            "torch.Size([512, 15]) torch.Size([512, 15])\n",
-            "torch.Size([512]) torch.Size([512])\n",
-            "torch.Size([512, 15]) torch.Size([512, 15])\n",
-            "torch.Size([512]) torch.Size([512])\n",
-            "torch.Size([512, 15]) torch.Size([512, 15])\n",
-            "torch.Size([512]) torch.Size([512])\n",
-            "torch.Size([512, 15]) torch.Size([512, 15])\n",
-            "torch.Size([512]) torch.Size([512])\n",
-            "torch.Size([512, 15]) torch.Size([512, 15])\n",
-            "torch.Size([512]) torch.Size([512])\n",
-            "torch.Size([512, 15]) torch.Size([512, 15])\n",
-            "torch.Size([512]) torch.Size([512])\n",
-            "torch.Size([512, 15]) torch.Size([512, 15])\n",
-            "torch.Size([512]) torch.Size([512])\n",
-            "torch.Size([512, 15]) torch.Size([512, 15])\n"
+            "Step 0, Loss: 16.01481819152832, learning rate: [0.05]\n",
+            "Step 20, Loss: 15.996270906357537, learning rate: [0.05]\n",
+            "Step 40, Loss: 15.986798077094846, learning rate: [0.05]\n",
+            "Step 60, Loss: 15.95391423584985, learning rate: [0.05]\n"
           ]
         }
       ],
@@ -895,6 +869,17 @@
         "def get_word_vector(word, embedding_matrix, word_to_index=word_to_index):\n",
         "    return embedding_matrix[word_to_index[word]]"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "embedding_matrix_context.shape"
+      ],
+      "metadata": {
+        "id": "8PDcCmQ31H7a"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1013,7 +998,7 @@
       "outputs": [],
       "source": [
         "word_embeddings = torch.cat(\n",
-        "    [embedding_matrix_context[word_to_index[x]][None, :] for x in top_words], dim=0\n",
+        "    [embedding_matrix_context.T[word_to_index[x]][None, :] for x in top_words], dim=0\n",
         ").numpy()"
       ]
     },
@@ -1124,11 +1109,57 @@
         "    selected_words, embedding_matrix_context, word_to_index\n",
         ")\n",
         "\n",
-        "with open(\"submission_dict.json\", \"w\") as iofile:\n",
+        "with open(\"/content/drive/MyDrive/submission_dict_2.json\", \"w\") as iofile:\n",
         "    json.dump(word_vectors, iofile)\n",
         "print(\"File saved to `submission_dict.json`\")\n",
         "# __________end of block__________"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "7f3LmbWf3mhq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!cp /content/submission_dict.json /content/drive/MyDrive"
+      ],
+      "metadata": {
+        "id": "njimCvyF4_0b"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!ls /content/drive/"
+      ],
+      "metadata": {
+        "id": "fSMMbGwr5Qmm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pwd"
+      ],
+      "metadata": {
+        "id": "HIVXOByL31ID"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
@@ -1154,7 +1185,7 @@
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "bcdced2319354f6393dcbb47f45bfaa6": {
+        "ddf392358e7749e78920179bd1c0c2f6": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
           "model_module_version": "1.5.0",
@@ -1169,14 +1200,14 @@
             "_view_name": "HBoxView",
             "box_style": "",
             "children": [
-              "IPY_MODEL_d26f03f51a3c45f5ab4b5485674c3370",
-              "IPY_MODEL_ed983ad9e56440da85549827619bd511",
-              "IPY_MODEL_9e909b34ce2c4d9eab4586893a625c8c"
+              "IPY_MODEL_b0f99b429c184ec5961da4a87272b32b",
+              "IPY_MODEL_d3cd8d51b7fb4c76bf40d51b6eaf3863",
+              "IPY_MODEL_c205b42a743b44b89a8824f6390610df"
             ],
-            "layout": "IPY_MODEL_69c188e75a824d4d8fe7c55122a0496a"
+            "layout": "IPY_MODEL_43fa27fbeb3e41459834379d729a5d5e"
           }
         },
-        "d26f03f51a3c45f5ab4b5485674c3370": {
+        "b0f99b429c184ec5961da4a87272b32b": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -1191,13 +1222,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_bc37f85b7f90454e831c2a30ed300031",
+            "layout": "IPY_MODEL_c781e17c509a413db8647cb95d429a76",
             "placeholder": "​",
-            "style": "IPY_MODEL_09d33180ada34314affbce1a8771483f",
-            "value": "  1%"
+            "style": "IPY_MODEL_0a72c434400c48c1a36c0906b5cbc384",
+            "value": "  3%"
           }
         },
-        "ed983ad9e56440da85549827619bd511": {
+        "d3cd8d51b7fb4c76bf40d51b6eaf3863": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "FloatProgressModel",
           "model_module_version": "1.5.0",
@@ -1213,15 +1244,15 @@
             "bar_style": "",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_cc85341b87474d6db422e21b12c08bd9",
+            "layout": "IPY_MODEL_e23e8b70ddf54076b45da2fb085866a5",
             "max": 2500,
             "min": 0,
             "orientation": "horizontal",
-            "style": "IPY_MODEL_8a3c14b3b9d24f56bda63b7e98824ab4",
-            "value": 32
+            "style": "IPY_MODEL_6b25d6983f5b457fb86603f45e01e632",
+            "value": 74
           }
         },
-        "9e909b34ce2c4d9eab4586893a625c8c": {
+        "c205b42a743b44b89a8824f6390610df": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -1236,13 +1267,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_70cb273e57394f36a21ee9f2a98808a3",
+            "layout": "IPY_MODEL_e2dab6a7cfb44c36a2c0e4b2b714aa44",
             "placeholder": "​",
-            "style": "IPY_MODEL_6250081dd84742f3be3d418ea28b747a",
-            "value": " 32/2500 [04:03&lt;5:28:41,  7.99s/it]"
+            "style": "IPY_MODEL_eff0f4db1dfd41a09a18d955cb3a602c",
+            "value": " 74/2500 [02:34&lt;1:35:27,  2.36s/it]"
           }
         },
-        "69c188e75a824d4d8fe7c55122a0496a": {
+        "43fa27fbeb3e41459834379d729a5d5e": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -1294,7 +1325,7 @@
             "width": null
           }
         },
-        "bc37f85b7f90454e831c2a30ed300031": {
+        "c781e17c509a413db8647cb95d429a76": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -1346,7 +1377,7 @@
             "width": null
           }
         },
-        "09d33180ada34314affbce1a8771483f": {
+        "0a72c434400c48c1a36c0906b5cbc384": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -1361,7 +1392,7 @@
             "description_width": ""
           }
         },
-        "cc85341b87474d6db422e21b12c08bd9": {
+        "e23e8b70ddf54076b45da2fb085866a5": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -1413,7 +1444,7 @@
             "width": null
           }
         },
-        "8a3c14b3b9d24f56bda63b7e98824ab4": {
+        "6b25d6983f5b457fb86603f45e01e632": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ProgressStyleModel",
           "model_module_version": "1.5.0",
@@ -1429,7 +1460,7 @@
             "description_width": ""
           }
         },
-        "70cb273e57394f36a21ee9f2a98808a3": {
+        "e2dab6a7cfb44c36a2c0e4b2b714aa44": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -1481,7 +1512,7 @@
             "width": null
           }
         },
-        "6250081dd84742f3be3d418ea28b747a": {
+        "eff0f4db1dfd41a09a18d955cb3a602c": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
